--- a/arc-cicd-cluster/templates/dev/azure-vote/helm/values.yaml
+++ b/arc-cicd-cluster/templates/dev/azure-vote/helm/values.yaml
@@ -1,4 +1,4 @@
 title: "Voting Application"
 serviceType: ClusterIP
-imageRepo: esocregistry.azurecr.io
+imageRepo: esocregistry.azurecr.io/azvote
 demoAppUrl: "/"
